#待处理的子目录
#无依赖
add_subdirectory(alg)
add_subdirectory(hal)
add_subdirectory(log)
add_subdirectory(xml)
add_subdirectory(common)
add_subdirectory(database)
add_subdirectory(keyboard)
add_subdirectory(language)
add_subdirectory(qextserialport)
#较少依赖
add_subdirectory(config)
add_subdirectory(widget)
add_subdirectory(timeseq)
#一般依赖
add_subdirectory(print)
add_subdirectory(transmit)
add_subdirectory(datatable)
#较多依赖
add_subdirectory(count)
#最高层
add_subdirectory(ui)